--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@ionic-native/status-bar": "^5.2.0",
     "@ionic/angular": "^4.1.0",
     "ajv": "^6.9.1",
-    "cordova-android": "6.4.0",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
@@ -95,8 +94,6 @@
       },
       "cordova-plugin-network-information": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
